[package]
name = "linebot_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clipboard-win = "5.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uiautomation = { version = "0.25", features = ["clipboard", "input", "process"] }
